{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 29,
  "lineage": "446ba9cb-e94f-486c-d06a-032b0aac61ba",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:307219859501:subnet/subnet-7337da18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "id": "subnet-7337da18",
            "map_public_ip_on_launch": true,
            "owner_id": "307219859501",
            "state": "available",
            "vpc_id": "vpc-4de22726"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:307219859501:subnet/subnet-87a8f3fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "id": "subnet-87a8f3fd",
            "map_public_ip_on_launch": true,
            "owner_id": "307219859501",
            "state": "available",
            "vpc_id": "vpc-4de22726"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:307219859501:subnet/subnet-fedf5db2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "id": "subnet-fedf5db2",
            "map_public_ip_on_launch": true,
            "owner_id": "307219859501",
            "state": "available",
            "vpc_id": "vpc-4de22726"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:307219859501:vpc/vpc-4de22726",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-d77edebc",
            "default_route_table_id": "rtb-ca29aba1",
            "default_security_group_id": "sg-de17caba",
            "dhcp_options_id": "dopt-9d66b9f6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-4de22726",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-ca29aba1",
            "owner_id": "307219859501"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "control_plane",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-059d836af932792c3",
            "arn": "arn:aws:ec2:us-east-2:307219859501:instance/i-0c1b24b0629806888",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "iam_instance_profile": "demo-host",
            "id": "i-0c1b24b0629806888",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "demo-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0f6c504d31d4bb219",
            "private_dns": "ip-172-31-12-101.us-east-2.compute.internal",
            "private_ip": "172.31.12.101",
            "public_dns": "ec2-18-216-234-94.us-east-2.compute.amazonaws.com",
            "public_ip": "18.216.234.94",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c4f2e2ebc3e52f9b",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "demo-common",
              "demo-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-7337da18",
            "tags": {
              "Name": "demo-control_plane-1",
              "kubernetes.io/cluster/demo": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0595ea25cfc56ef5d",
              "sg-07135cf291258d098"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.profile",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-059d836af932792c3",
            "arn": "arn:aws:ec2:us-east-2:307219859501:instance/i-0f57fad5b3a9d59c6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "iam_instance_profile": "demo-host",
            "id": "i-0f57fad5b3a9d59c6",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "demo-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0a48ebff313d70f3c",
            "private_dns": "ip-172-31-22-144.us-east-2.compute.internal",
            "private_ip": "172.31.22.144",
            "public_dns": "ec2-3-135-63-95.us-east-2.compute.amazonaws.com",
            "public_ip": "3.135.63.95",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-023ea2a27424b284a",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "demo-common",
              "demo-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-87a8f3fd",
            "tags": {
              "Name": "demo-control_plane-2",
              "kubernetes.io/cluster/demo": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0595ea25cfc56ef5d",
              "sg-07135cf291258d098"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.profile",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-059d836af932792c3",
            "arn": "arn:aws:ec2:us-east-2:307219859501:instance/i-02a4b6afa980477f9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "iam_instance_profile": "demo-host",
            "id": "i-02a4b6afa980477f9",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "demo-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0195f8caaddd10d04",
            "private_dns": "ip-172-31-46-161.us-east-2.compute.internal",
            "private_ip": "172.31.46.161",
            "public_dns": "ec2-13-59-30-118.us-east-2.compute.amazonaws.com",
            "public_ip": "13.59.30.118",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-022172f8c6f2f238c",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "demo-common",
              "demo-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-fedf5db2",
            "tags": {
              "Name": "demo-control_plane-3",
              "kubernetes.io/cluster/demo": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0595ea25cfc56ef5d",
              "sg-07135cf291258d098"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.profile",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "control_plane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:307219859501:loadbalancer/net/demo-api-lb/949a4266f12abff3",
            "arn_suffix": "net/demo-api-lb/949a4266f12abff3",
            "dns_name": "demo-api-lb-949a4266f12abff3.elb.us-east-2.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:307219859501:loadbalancer/net/demo-api-lb/949a4266f12abff3",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "demo-api-lb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-7337da18"
              },
              {
                "subnet_id": "subnet-87a8f3fd"
              },
              {
                "subnet_id": "subnet-fedf5db2"
              }
            ],
            "subnets": [
              "subnet-7337da18",
              "subnet-87a8f3fd",
              "subnet-fedf5db2"
            ],
            "tags": {
              "Cluster": "demo",
              "kubernetes.io/cluster/demo": "shared"
            },
            "vpc_id": "vpc-4de22726",
            "zone_id": "ZLMOA37VPKANP"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "control_plane_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:307219859501:listener/net/demo-api-lb/949a4266f12abff3/f67139f41a154108",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:307219859501:targetgroup/demo-api/000992733ada9367",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:307219859501:listener/net/demo-api-lb/949a4266f12abff3/f67139f41a154108",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:307219859501:loadbalancer/net/demo-api-lb/949a4266f12abff3",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_lb.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "control_plane_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:307219859501:targetgroup/demo-api/000992733ada9367",
            "arn_suffix": "targetgroup/demo-api/000992733ada9367",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:307219859501:targetgroup/demo-api/000992733ada9367",
            "lambda_multi_value_headers_enabled": false,
            "name": "demo-api",
            "port": 6443,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "target_type": "instance",
            "vpc_id": "vpc-4de22726"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "control_plane_api",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:307219859501:targetgroup/demo-api/000992733ada9367-20191230234850790700000003",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:307219859501:targetgroup/demo-api/000992733ada9367",
            "target_id": "i-0c1b24b0629806888"
          },
          "dependencies": [
            "aws_iam_instance_profile.profile",
            "aws_instance.control_plane",
            "aws_key_pair.deployer",
            "aws_lb_target_group.control_plane_api",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:307219859501:targetgroup/demo-api/000992733ada9367-20191230234850615800000002",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:307219859501:targetgroup/demo-api/000992733ada9367",
            "target_id": "i-0f57fad5b3a9d59c6"
          },
          "dependencies": [
            "aws_iam_instance_profile.profile",
            "aws_instance.control_plane",
            "aws_key_pair.deployer",
            "aws_lb_target_group.control_plane_api",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:307219859501:targetgroup/demo-api/000992733ada9367-20191230234850542400000001",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:307219859501:targetgroup/demo-api/000992733ada9367",
            "target_id": "i-02a4b6afa980477f9"
          },
          "dependencies": [
            "aws_iam_instance_profile.profile",
            "aws_instance.control_plane",
            "aws_key_pair.deployer",
            "aws_lb_target_group.control_plane_api",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "common",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:307219859501:security-group/sg-0595ea25cfc56ef5d",
            "description": "cluster common rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0595ea25cfc56ef5d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "demo-common",
            "name_prefix": null,
            "owner_id": "307219859501",
            "revoke_rules_on_delete": false,
            "tags": {
              "kubernetes.io/cluster/demo": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-4de22726"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "control_plane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:307219859501:security-group/sg-07135cf291258d098",
            "description": "cluster control_planes",
            "egress": [],
            "id": "sg-07135cf291258d098",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "demo-control_planes",
            "name_prefix": null,
            "owner_id": "307219859501",
            "revoke_rules_on_delete": false,
            "tags": {
              "kubernetes.io/cluster/demo": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-4de22726"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    }
  ]
}